Added new parameter and its getter in Configuration class Modified signature and implementation of serverIpValidator method in Configuration class Modified constructor in Configuration class Modified Config.json file in resources

--- a/src/main/resources/it/polimi/ingsw/am32/Utilities/Config.json
+++ b/src/main/resources/it/polimi/ingsw/am32/Utilities/Config.json
@@ -2,6 +2,7 @@
   "socketPort": 30000,
   "rmiPort": 30001,
   "pingTimePeriod": 5000,
+  "socketReadTimeout": 100,
   "maxPingCount": 3,
   "serverIp": "127.0.0.1"
 }
