Added endGameDueToDisconnectionTimeout parameter to Configuration.java. Used value in GameController.java

--- a/src/main/resources/it/polimi/ingsw/am32/Utilities/Config.json
+++ b/src/main/resources/it/polimi/ingsw/am32/Utilities/Config.json
@@ -4,5 +4,6 @@
   "pingTimePeriod": 5000,
   "socketReadTimeout": 100,
   "maxPingCount": 3,
-  "serverIp": "127.0.0.1"
+  "serverIp": "127.0.0.1",
+  "endGameDueToDisconnectionTimeout": 120000
 }
