--- a/pom.xml
+++ b/pom.xml
@@ -146,14 +146,14 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <id>server</id>
+                        <id>SERVER</id>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
                         <configuration>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <shadedClassifierName>server</shadedClassifierName>
+                            <shadedClassifierName>SERVER</shadedClassifierName>
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
@@ -163,14 +163,14 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>client</id>
+                        <id>CLIENT</id>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
                         <configuration>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <shadedClassifierName>server</shadedClassifierName>
+                            <shadedClassifierName>CLIENT</shadedClassifierName>
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
